--- a/pipelines/pipeline.yml
+++ b/pipelines/pipeline.yml
@@ -104,6 +104,11 @@ stages:
                       workingDirectory: infrastructure
                       targetType: 'inline'
                       script: terraform output -json >> output.json
+                    env:
+                      ARM_CLIENT_ID: $(arm_client_id)
+                      ARM_CLIENT_SECRET: $(arm_client_secret)
+                      ARM_TENANT_ID: $(arm_tenant_id)
+                      ARM_SUBSCRIPTION_ID: $(arm_subscription_id)
 
                   - task: Bash@3
                     name: set_var_step
