--- a/pipelines/templates/dummy_ssh.yml
+++ b/pipelines/templates/dummy_ssh.yml
@@ -7,5 +7,5 @@ steps:
       script: |
         rm -rf keys
         mkdir keys
-        touch keys/key.pub
+        echo "iamafakekey" >> keys/key.pub
         ls keys
