password config for destroy

--- a/pipelines/infrastructure-destroy.yml
+++ b/pipelines/infrastructure-destroy.yml
@@ -31,8 +31,6 @@ jobs:
               parameters:
                 env: ${{ parameters.env }}
 
-            - template: templates/dummy_ssh.yml
-
             - task: Bash@3
               inputs:
                 workingDirectory: infrastructure
@@ -44,3 +42,5 @@ jobs:
                 ARM_CLIENT_SECRET: $(arm_client_secret)
                 ARM_TENANT_ID: $(arm_tenant_id)
                 ARM_SUBSCRIPTION_ID: $(arm_subscription_id)
+                TF_VAR_os_user: fake_username
+                TF_VAR_os_password: fake_password
