--- a/pipelines/pipeline.yml
+++ b/pipelines/pipeline.yml
@@ -5,6 +5,8 @@ pool:
 
 variables:
   - group: service_principals
+  - name: username
+    value: ${{ parameters.env }}AdminUser
 
 parameters:
   - name: env
@@ -39,19 +41,27 @@ stages:
                 env: ${{ parameters.env }}
 
             - task: Bash@3
-              displayName: Plan Terraform
+              displayName: Plan Terraform from commit $(Build.SourceVersion)
               inputs:
                 workingDirectory: infrastructure
                 targetType: 'inline'
                 script: |
                   terraform plan \
                   -var-file=${{ parameters.env }}/env.tfvars \
+                  -out $(Build.StagingDirectory)/${{ parameters.env }}.plan
               env:
                 ARM_CLIENT_ID: $(arm_client_id)
                 ARM_CLIENT_SECRET: $(arm_client_secret)
                 ARM_TENANT_ID: $(arm_tenant_id)
                 ARM_SUBSCRIPTION_ID: $(arm_subscription_id)
-                TF_VAR_os_user: fake_username
+                TF_VAR_os_user: $(username)
+
+            - ${{ if eq(parameters.apply, true) }}:
+              - task: PublishPipelineArtifact@1
+                displayName: Publish output of plan
+                inputs:
+                  targetPath: $(Build.StagingDirectory)/${{ parameters.env }}.plan
+                  publishLocation: 'pipeline'
 
   - ${{ if eq(parameters.apply, true) }}:
     - stage: deploy
@@ -60,9 +70,6 @@ stages:
         - deployment: deploy
           displayName: Deploy to environment
           environment: ${{ parameters.env }}
-          variables:
-            - name: username
-              value: ${{ parameters.env }}AdminUser
           strategy:
             runOnce:
               deploy:
@@ -75,21 +82,36 @@ stages:
                     parameters:
                       env: ${{ parameters.env }}
 
-                  - task: Bash@3
-                    displayName: Apply Terraform
-                    inputs:
-                      workingDirectory: infrastructure
-                      targetType: 'inline'
-                      script: |
-                        terraform apply \
-                        -var-file=${{ parameters.env }}/env.tfvars \
-                        -auto-approve
-                    env:
-                      ARM_CLIENT_ID: $(arm_client_id)
-                      ARM_CLIENT_SECRET: $(arm_client_secret)
-                      ARM_TENANT_ID: $(arm_tenant_id)
-                      ARM_SUBSCRIPTION_ID: $(arm_subscription_id)
-                      TF_VAR_os_user: $(username)
+                  - ${{ if eq(parameters.plan, true) }}:
+                    - task: Bash@3
+                      displayName: Apply Terraform from plan
+                      inputs:
+                        workingDirectory: infrastructure
+                        targetType: 'inline'
+                        # Auto-download path = $(Pipeline.Workspace)/stage.job/
+                        script: terraform apply $(Pipeline.Workspace)/plan.plan/${{ parameters.env }}.plan
+                      env:
+                        ARM_CLIENT_ID: $(arm_client_id)
+                        ARM_CLIENT_SECRET: $(arm_client_secret)
+                        ARM_TENANT_ID: $(arm_tenant_id)
+                        ARM_SUBSCRIPTION_ID: $(arm_subscription_id)
+
+                  - ${{ if eq(parameters.plan, false) }}:
+                    - task: Bash@3
+                      displayName: Apply Terraform from commit $(Build.SourceVersion)
+                      inputs:
+                        workingDirectory: infrastructure
+                        targetType: 'inline'
+                        script: |
+                          terraform apply \
+                          -var-file=${{ parameters.env }}/env.tfvars \
+                          -auto-approve
+                      env:
+                        ARM_CLIENT_ID: $(arm_client_id)
+                        ARM_CLIENT_SECRET: $(arm_client_secret)
+                        ARM_TENANT_ID: $(arm_tenant_id)
+                        ARM_SUBSCRIPTION_ID: $(arm_subscription_id)
+                        TF_VAR_os_user: $(username)
 
                   - task: Bash@3
                     displayName: Terraform output into JSON file
@@ -104,6 +126,7 @@ stages:
                       ARM_SUBSCRIPTION_ID: $(arm_subscription_id)
 
                   - task: DownloadSecureFile@1
+                    # While defined here, is run as a pre-job step
                     name: ssh_key
                     displayName: Download ssh private key
                     inputs:
@@ -125,7 +148,6 @@ stages:
                         --private-key $(ssh_key.secureFilePath) \
                         --user $(username) \
                         --extra-vars target_server=$(python3 scripts/json_extract.py output.json) \
-                        --inventory configuration/inventory.ini \
-                        configuration/playbook.yml -v
+                        configuration/playbook.yml
                     env:
                       ANSIBLE_HOST_KEY_CHECKING: false
