--- a/pipelines/pipeline.yml
+++ b/pipelines/pipeline.yml
@@ -28,9 +28,9 @@ parameters:
     default: true
 
 stages:
-  - ${{ if eq(parameters.plan, true) }}:
     - stage: plan
       displayName: Plan environment
+      condition: eq('${{ parameters.plan }}', true)
       jobs:
         - job: plan
           displayName: Plan infrastructure
@@ -56,16 +56,16 @@ stages:
                 ARM_SUBSCRIPTION_ID: $(arm_subscription_id)
                 TF_VAR_os_user: $(username)
 
-            - ${{ if eq(parameters.apply, true) }}:
-              - task: PublishPipelineArtifact@1
-                displayName: Publish output of plan
-                inputs:
-                  targetPath: $(Build.StagingDirectory)/${{ parameters.env }}.plan
-                  publishLocation: 'pipeline'
+            - task: PublishPipelineArtifact@1
+              condition: eq('${{ parameters.apply }}', true)
+              displayName: Publish output of plan
+              inputs:
+                targetPath: $(Build.StagingDirectory)/${{ parameters.env }}.plan
+                publishLocation: 'pipeline'
 
-  - ${{ if eq(parameters.apply, true) }}:
     - stage: deploy
       displayName: Deploy to environment
+      condition: eq('${{ parameters.apply }}', true)
       jobs:
         - deployment: deploy
           displayName: Deploy to environment
@@ -82,36 +82,36 @@ stages:
                     parameters:
                       env: ${{ parameters.env }}
 
-                  - ${{ if eq(parameters.plan, true) }}:
-                    - task: Bash@3
-                      displayName: Apply Terraform from plan
-                      inputs:
-                        workingDirectory: infrastructure
-                        targetType: 'inline'
-                        # Auto-download path = $(Pipeline.Workspace)/stage.job/
-                        script: terraform apply $(Pipeline.Workspace)/plan.plan/${{ parameters.env }}.plan
-                      env:
-                        ARM_CLIENT_ID: $(arm_client_id)
-                        ARM_CLIENT_SECRET: $(arm_client_secret)
-                        ARM_TENANT_ID: $(arm_tenant_id)
-                        ARM_SUBSCRIPTION_ID: $(arm_subscription_id)
+                  - task: Bash@3
+                    displayName: Apply Terraform from plan
+                    condition: eq('${{ parameters.plan }}', true)
+                    inputs:
+                      workingDirectory: infrastructure
+                      targetType: 'inline'
+                      # Auto-download path = $(Pipeline.Workspace)/stage.job/
+                      script: terraform apply $(Pipeline.Workspace)/plan.plan/${{ parameters.env }}.plan
+                    env:
+                      ARM_CLIENT_ID: $(arm_client_id)
+                      ARM_CLIENT_SECRET: $(arm_client_secret)
+                      ARM_TENANT_ID: $(arm_tenant_id)
+                      ARM_SUBSCRIPTION_ID: $(arm_subscription_id)
 
-                  - ${{ if eq(parameters.plan, false) }}:
-                    - task: Bash@3
-                      displayName: Apply Terraform from commit $(Build.SourceVersion)
-                      inputs:
-                        workingDirectory: infrastructure
-                        targetType: 'inline'
-                        script: |
-                          terraform apply \
-                          -var-file=${{ parameters.env }}/env.tfvars \
-                          -auto-approve
-                      env:
-                        ARM_CLIENT_ID: $(arm_client_id)
-                        ARM_CLIENT_SECRET: $(arm_client_secret)
-                        ARM_TENANT_ID: $(arm_tenant_id)
-                        ARM_SUBSCRIPTION_ID: $(arm_subscription_id)
-                        TF_VAR_os_user: $(username)
+                  - task: Bash@3
+                    displayName: Apply Terraform from commit $(Build.SourceVersion)
+                    condition: eq('${{ parameters.plan }}', false)
+                    inputs:
+                      workingDirectory: infrastructure
+                      targetType: 'inline'
+                      script: |
+                        terraform apply \
+                        -var-file=${{ parameters.env }}/env.tfvars \
+                        -auto-approve
+                    env:
+                      ARM_CLIENT_ID: $(arm_client_id)
+                      ARM_CLIENT_SECRET: $(arm_client_secret)
+                      ARM_TENANT_ID: $(arm_tenant_id)
+                      ARM_SUBSCRIPTION_ID: $(arm_subscription_id)
+                      TF_VAR_os_user: $(username)
 
                   - task: Bash@3
                     displayName: Terraform output into JSON file
